add markup header

--- a/index.html
+++ b/index.html
@@ -25,36 +25,40 @@
   </head>
   <body class="body">
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="header-nav-logo"
-          >Web<span class="header-nav-logo-raleway">Studio</span></a
-        >
-        <ul class="header-nav-list">
-          <li class="header-nav-list-title">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-nav-list-title">
-            <a class="nav-link" href="">Portfolio</a>
-          </li>
-          <li class="header-nav-list-title">
-            <a class="nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+      <div class="container">
+        <div class="header-container">
+          <nav class="header-nav">
+            <a href="./index.html" class="header-nav-logo"
+              >Web<span class="header-nav-logo-raleway">Studio</span></a
             >
-          </li>
-          <li class="contacts-item-">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <ul class="header-nav-list">
+              <li class="header-nav-list-title">
+                <a class="nav-link" href="./index.html">Studio</a>
+              </li>
+              <li class="header-nav-list-title">
+                <a class="nav-link" href="">Portfolio</a>
+              </li>
+              <li class="header-nav-list-title">
+                <a class="nav-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="contacts">
+            <ul class="contacts-list">
+              <li class="contacts-item">
+                <a class="contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts-item-">
+                <a class="contacts-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
     </header>
     <main>
       <section id="baner" class="banner">
