--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.com/libraries/modern-normalize"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
   </head>
   <body class="body">
