add markup header

--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
     </header>
     <main>
       <section id="baner" class="banner">
-        <h1 class="header-title">
-          Effective Solutions <br />
-          for Your Business
-        </h1>
-        <button class="button-baner" type="button">Order Service</button>
+        <div class="container-baner">
+          <h1 class="header-title">Effective Solutions for Your Business</h1>
+          <button class="button-baner" type="button">Order Service</button>
+        </div>
       </section>
       <section id="about" class="about">
         <h2 class="about-title">About us</h2>
