add markup header

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
     <main>
       <section id="baner" class="banner">
-        <div class="container-baner">
+        <div class="container-banner">
           <h1 class="header-title">Effective Solutions for Your Business</h1>
           <button class="button-baner" type="button">Order Service</button>
         </div>
