add markup header

--- a/index.html
+++ b/index.html
@@ -22,38 +22,36 @@
   <body class="body">
     <header class="header">
       <div class="container">
-        <div class="header-container">
-          <nav class="header-nav">
-            <a href="./index.html" class="header-nav-logo"
-              >Web<span class="header-nav-logo-raleway">Studio</span></a
-            >
-            <ul class="header-nav-list">
-              <li class="header-nav-list-title">
-                <a class="nav-link" href="./index.html">Studio</a>
-              </li>
-              <li class="header-nav-list-title">
-                <a class="nav-link" href="">Portfolio</a>
-              </li>
-              <li class="header-nav-list-title">
-                <a class="nav-link" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <address class="contacts">
-            <ul class="contacts-list">
-              <li class="contacts-item">
-                <a class="contacts-link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="contacts-item-">
-                <a class="contacts-link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+        <nav class="header-nav">
+          <a href="./index.html" class="header-nav-logo"
+            >Web<span class="header-nav-logo-raleway">Studio</span></a
+          >
+          <ul class="header-nav-list">
+            <li class="header-nav-list-title">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-nav-list-title">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li class="header-nav-list-title">
+              <a class="nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item-">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
@@ -64,42 +62,44 @@
         </div>
       </section>
       <section id="about" class="about">
-        <h2 class="about-title">About us</h2>
-        <ul class="about-list">
-          <li class="about-list-item">
-            <h3 class="about-list-title">Strategy</h3>
-            <p class="about-list-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="about-list-item">
-            <h3 class="about-list-title">Punctuality</h3>
-            <p class="about-list-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="about-list-item">
-            <h3 class="about-list-title">Diligence</h3>
-            <p class="about-list-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="about-list-item">
-            <h3 class="about-list-title">Design</h3>
-            <p class="about-list-text">
-              We create a unique design for each project, taking into account
-              the needs of the client and the target audience.
-            </p>
-            <h3>Technologies</h3>
-            <p class="about-list-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="visually-hidden">About us/></div>
+        <div class="container">
+          <ul class="about-list">
+            <li class="about-list-item">
+              <h3 class="about-list-title">Strategy</h3>
+              <p class="about-list-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="about-list-item">
+              <h3 class="about-list-title">Punctuality</h3>
+              <p class="about-list-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="about-list-item">
+              <h3 class="about-list-title">Diligence</h3>
+              <p class="about-list-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="about-list-item">
+              <h3 class="about-list-title">Design</h3>
+              <p class="about-list-text">
+                We create a unique design for each project, taking into account
+                the needs of the client and the target audience.
+              </p>
+              <h3>Technologies</h3>
+              <p class="about-list-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="workers" class="workers">
         <h2 class="workers-title">Our Team</h2>
