add markup header

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </section>
       <section id="about" class="about">
         <div class="visually-hidden">About us/></div>
-        <div class="container">
+        <div class="container about-container">
           <ul class="about-list">
             <li class="about-list-item">
               <h3 class="about-list-title">Strategy</h3>
