--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <main>
       <section id="baner" class="banner">
-        <div class="container">
+        <div class="container container-banner">
           <h1 class="header-title">Effective Solutions for Your Business</h1>
           <button class="button-baner" type="button">Order Service</button>
         </div>
