--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <div class="container">
+      <div class="container container-header">
         <nav class="header-nav">
           <a href="./index.html" class="header-nav-logo"
             >Web<span class="header-nav-logo-raleway">Studio</span></a
@@ -56,7 +56,7 @@
     </header>
     <main>
       <section id="baner" class="banner">
-        <div class="container">
+        <div class="container container-baner">
           <h1 class="header-title">Effective Solutions for Your Business</h1>
           <button class="button-baner" type="button">Order Service</button>
         </div>
@@ -86,12 +86,6 @@
                 opportunities and minimize risk.
               </p>
             </li>
-            <li class="about-list-item">
-              <h3 class="about-list-title">Design</h3>
-              <p class="about-list-text">
-                We create a unique design for each project, taking into account
-                the needs of the client and the target audience.
-              </p>
               <h3>Technologies</h3>
               <p class="about-list-text">
                 Design practice focused on digital experiences. We bring forth a
