--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 opportunities and minimize risk.
               </p>
             </li>
+            <li class="about-list-item">
               <h3>Technologies</h3>
               <p class="about-list-text">
                 Design practice focused on digital experiences. We bring forth a
