--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         </div>
       </section>
       <section id="about" class="about">
+        <div class="about-us"></div>
+        "
         <h2 class="visually-hidden">About us/></h2>
         <div class="container about-container">
           <ul class="about-list">
