add markup header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="container container-header">
         <nav class="header-nav">
-          <a href="./index.html" class="header-nav-logo"
+          <a href="./index.html" class="logo"
             >Web<span class="header-nav-logo-raleway">Studio</span></a
           >
           <ul class="header-nav-list">
@@ -193,7 +193,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="header-nav-logo"
+      <a href="./index.html" class="footer-logo"
         >Web<span class="logo-footer-raleway">Studio</span></a
       >
       <p class="footer-text">
