--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </p>
             </li>
             <li class="about-list-item">
-              <h3>Technologies</h3>
+              <h3 class="about-list-title">Technologies</h3>
               <p class="about-list-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
