--- a/index.html
+++ b/index.html
@@ -97,34 +97,59 @@
         </div>
       </section>
       <section id="workers" class="workers">
-        <h2 class="workers-title">Our Team</h2>
-        <ul class="workers-list">
-          <li class="workers-list-item">
-            <img src="./images/mark.jpg" alt="Mark" width="264" height="260" />
-            <h3 class="worker-list-title">Mark Guerrero</h3>
-            <p class="worker-list-text">Product Designer</p>
-          </li>
-          <li class="workers-list-item">
-            <img src="./images/tom.jpg" alt="Tom" width="264" height="260" />
-            <h3 class="worker-list-title">Tom Ford</h3>
-            <p class="worker-list-text">Frontend Developer</p>
-          </li>
-          <li class="workers-list-item">
-            <img
-              src="./images/camila.jpg"
-              alt="Camila"
-              width="264"
-              height="260"
-            />
-            <h3 class="worker-list-title">Camila Garcia</h3>
-            <p class="worker-list-text">Marketing</p>
-          </li>
-          <li class="workers-list-item">
-            <img src="./images/dan.jpg" alt="Daniel" width="264" height="260" />
-            <h3 class="worker-list-title">Daniel Wilson</h3>
-            <p class="worker-list-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container workers-container">
+          <h2 class="visually-hidden">Our Team</h2>
+          <p class="visually-hidden">
+            We are a team of professionals who are ready to help you with your
+            business.
+          </p>
+          <h2 class="workers-title">Our Team</h2>
+          <ul class="workers-list">
+            <li class="workers-list-item">
+              <img
+                src="./images/mark.jpg"
+                alt="Mark"
+                width="264"
+                height="260"
+              />
+              <div class="workers-name">
+                <h3 class="worker-list-title">Mark Guerrero</h3>
+                <p class="worker-list-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="workers-list-item">
+              <img src="./images/tom.jpg" alt="Tom" width="264" height="260" />
+              <div class="workers-name">
+                <h3 class="worker-list-title">Tom Ford</h3>
+                <p class="worker-list-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="workers-list-item">
+              <img
+                src="./images/camila.jpg"
+                alt="Camila"
+                width="264"
+                height="260"
+              />
+              <div class="workers-name">
+                <h3 class="worker-list-title">Camila Garcia</h3>
+                <p class="worker-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="workers-list-item">
+              <img
+                src="./images/dan.jpg"
+                alt="Daniel"
+                width="264"
+                height="260"
+              />
+              <div class="workers-name">
+                <h3 class="worker-list-title">Daniel Wilson</h3>
+                <p class="worker-list-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="portfolio" class="portfolio">
         <h2 class="portfolio-title">Portfolio</h2>
