--- a/index.html
+++ b/index.html
@@ -218,13 +218,15 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"
-        >Web<span class="logo-footer-raleway">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container container-footer">
+        <a href="./index.html" class="footer-logo"
+          >Web<span class="logo-footer-raleway">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
