add markup header

--- a/index.html
+++ b/index.html
@@ -152,69 +152,87 @@
         </div>
       </section>
       <section id="portfolio" class="portfolio">
-        <h2 class="portfolio-title">Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-list-item">
-            <img
-              src="./images/bankapp.jpg"
-              alt="banking app"
-              width="360"
-              height="260"
-            />
-            <h3 class="portfolio-list-title">Banking App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/payment.jpg"
-              alt="cashless payment"
-              width="360"
-              height="260"
-            />
-            <h3 class="portfolio-list-title">Cashless Payment</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/meditapp.jpg"
-              alt="meditapp"
-              width="360"
-              height="260"
-            />
-            <h3 class="portfolio-list-title">Meditation App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/taxiserv.jpg"
-              alt="taxiserv"
-              width="360"
-              height="260"
-            />
-            <h3 class="portfolio-list-title">Taxi Service</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/scrillustr.jpg"
-              alt="screen illustration"
-              width="360"
-              height="260"
-            />
-            <h3 class="portfolio-list-title">Screen Illustrations</h3>
-            <p class="portfolio-list-text">Design</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/onlinecours.jpg"
-              alt="online courses"
-              width="360"
-              height="260"
-            />
-            <h3 class="portfolio-list-title">Online Courses</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container portfolio-container">
+          <p class="visually-hidden">
+            We are a team of professionals who are ready to help you with your
+            business.
+          </p>
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                src="./images/bankapp.jpg"
+                alt="banking app"
+                width="360"
+                height="260"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/payment.jpg"
+                alt="cashless payment"
+                width="360"
+                height="260"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/meditapp.jpg"
+                alt="meditapp"
+                width="360"
+                height="260"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/taxiserv.jpg"
+                alt="taxiserv"
+                width="360"
+                height="260"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/scrillustr.jpg"
+                alt="screen illustration"
+                width="360"
+                height="260"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/onlinecours.jpg"
+                alt="online courses"
+                width="360"
+                height="260"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
